--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:wght@100..900&display=swap&family=Hammersmith+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,9 +18,9 @@
             <div class="box">
                 <img src="./img/Logo.png" alt="1.1" class="logo">
                 <ul class="header-links">
-                    <li><a href="" class="header-link">Головна</a></li>
-                    <li><a href="" class="header-link">Про нас</a></li>
-                    <li><a href="" class="header-link">Контакти</a></li>
+                    <li><a href="#" class="header-link">Головна</a></li>
+                    <li><a href="#" class="header-link">Про нас</a></li>
+                    <li><a href="#" class="header-link">Контакти</a></li>
                 </ul>
                 <button class="login-button">Увійти</button>
                 <div class="switch-container">
@@ -43,23 +43,23 @@
                             <ul class="translate-list">
                                 <li class="av-item">
                                     <p class="av-lang">
-                                        Oe perlltxe hu tsamsiyu! <br>
-                                        Ngari hu Eywa salew tirea, <br> 
-                                        tokx 'ì'awn slu Na'viyä hapxì. <br>
+                                        Oe perlltxe hu tsamsiyu!
+                                        Ngari hu Eywa salew tirea,
+                                        tokx 'ì'awn slu Na'viyä hapxì.
                                         Säwem nìayoeng!
                                     </p>
                                 </li>
                                 <li class="ua-item">
                                     <p class="ua-lang">
-                                        Хоробрий воїне, звертаюсь до тебе! <br>
-                                        Твій дух йде з Ейвою, <br>
-                                        твоє тіло залишається, <br>
-                                        щоб стати частиною Народу. <br>
+                                        Хоробрий воїне, звертаюсь до тебе!
+                                        Твій дух йде з Ейвою,
+                                        твоє тіло залишається,
+                                        щоб стати частиною Народу.
                                         Борись разом з нами!
                                     </p>
                                 </li>
                                 <li class="button-item">
-                                    <button class="main-button">Приєднатися до<br> клану</button>
+                                    <button class="main-button">Приєднатися до клану</button>
                                 </li>
                             </ul>
                         </div>
