new decorations added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                                     <button class="main-button">Приєднатися до клану</button>
                                 </li>
                             </ul>
+                            <ul class="decoration-list">
+                                <li class="decoration-item"><div class="decoration"></div></li>
+                                <li class="decoration-item"><div class="decoration"></div></li>
+                                <li class="decoration-item"><div class="decoration"></div></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="quote-item">
