--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <ul class="trailer-list">
                     <li class="trailer-item">
                         <div class="container">
-                            <button class="main-button">Дивитись трейлер</button>
+                            <a href="https://www.youtube.com/watch?v=d9MyW72ELq0" target="_blank" class="main-button">Дивитись трейлер</a>
                         </div>
                     </li>
                     <li class="quote-item">
